src/js/components/Login/Login.css
.login-container {
    position: fixed;
    overflow: scroll;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    height: 100%;
    padding: 0;
}
.login-container>.col {
    color: #ffffff;
    height: 100%;
    padding: 10% 0;
    position: relative;
}
.login-container>.col>div {
    position: absolute;
    width: 90%;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
}
.login-container h6 {
    padding: 0 20px 10px;
    line-height: 1.5;
}

.hero-image>div {
    min-height: 500px;
    max-height: 500px;
    display: inline-block;
    width: 100%;
    max-width: 500px;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center center;
}

